# lockbox

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  frontend-bundle.yml
docs/: index.md
docs/context/: dhis2.md  roadmap.md  trade-offs.md
docs/design/: architecture.md  encryption.md  offline-sync.md  service-worker.md  threat-model.md
docs/guide/: web-crypto.md  webauthn.md
docs/reference/: api.md  development.md  remote-access.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/e2e/: auto-pull.spec.ts  blocked-db.spec.ts  double-submit.spec.ts  helpers.ts  migration.spec.ts  multi-user.spec.ts  offline.spec.ts  outbox-reconcile.spec.ts  recovery.spec.ts  sync-modes.spec.ts  vault.spec.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  CommandPalette.tsx  NoteComposer.tsx  NoteList.tsx  PinPad.tsx  StatusBar.tsx  StatusMenu.tsx  SyncQueue.tsx  ThemeToggle.tsx  UnlockScreen.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  input.tsx  textarea.tsx
frontend/src/hooks/: use-auto-lock.ts  use-mobile.ts  use-notes.ts  use-sidebar.ts  use-sync.ts
frontend/src/lib/: api.ts  config.ts  crypto.test.ts  crypto.ts  db.ts  encoding.test.ts  encoding.ts  format.ts  markdown.ts  session.ts  sync.test.ts  sync.ts  webauthn.ts
frontend/src/pages/: KdfLabPage.tsx  NotesPage.tsx  SecurityPage.tsx  StoragePage.tsx  SyncModesPage.tsx
src/lockbox/: __init__.py  __main__.py  api.py  auth.py  cli.py  schemas.py  store.py
src/lockbox/static/: index.html
src/lockbox/static/assets/: index-5VVeJh-C.js  index-B6Sn6BQt.js  index-BDGR8otG.css  index-BQyZL1N2.js  index-BZxLKbyt.css  index-B_1cQPTn.js  index-C-VSQbTR.js  index-C9qesEGi.js  index-CHpxSAEL.css  index-CfeHrqZ2.css  index-CiuhdunU.js  index-CpWduM6D.css  index-CqVXClTX.css  index-CrLs4vg0.js  index-CupmUMu4.js  index-D8mtjsvS.js  index-DA4qjVBI.css  index-DCu1xGYi.css  index-DWRqi-kE.js  index-Dh_1dc33.js  index-DlhrBKKu.js  index-DqlhC33p.js  index-Dqt_5zT4.js  index-HGOKwbNb.js  index-NmvhPEbt.js  index-VNyn0vrN.css  index-_qfXC3zc.js  index-jJbCn6Hn.js  index-vV0hnu5A.js  index-yPn_kq3h.js
src/lockbox/templates/: sw.js
tests/: test_api.py
