[project]
name = "lockbox"
version = "0.1.0"
description = "Offline-first PWA with client-side encryption at rest - a learning project"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
requires-python = ">=3.13"
keywords = ["pwa", "offline-first", "encryption", "web-crypto", "indexeddb"]
dependencies = [
  "fastapi>=0.139.2",
  "jinja2>=3.1.6",
  "pydantic>=2.13.4",
  "typer>=0.27.0",
  "uvicorn[standard]>=0.51.0",
]

[project.scripts]
lockbox = "lockbox.cli:main"

[dependency-groups]
dev = [
  "coverage[toml]>=7.13.5",
  "httpx2>=2.4.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-panzoom-plugin>=0.5.2",
  "mypy>=2.3.0",
  "pymdown-extensions>=10.16",
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"src/**/*.py" = ["D102", "D105", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "__pycache__"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["lockbox"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
precision = 2
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/.venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportMissingTypeStubs = false
reportMissingModuleSource = false
